# eqorch

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.kiro/specs/eqorch/: design.md  requirements.md  spec.json  tasks.md
.kiro/steering/: directory-layout.md  intent.md  product.md  structure.md  tech.md
.kiro/steering/adrs/: 001-postgresql-readiness.md
configs/components/: components.yaml
docs/: development.md  operations.md
src/eqorch/: __init__.py  cli.py
src/eqorch/app/: __init__.py  error_coordinator.py  performance_budget.py  policy_store.py  research_concierge.py  retry_policy.py  runtime_checks.py
src/eqorch/domain/: __init__.py  models.py  policy.py
src/eqorch/gateways/: __init__.py  backend.py  engine.py  llm.py
src/eqorch/memory/: __init__.py  (+5 more)
tests/: postgres-compose.yml
tests/e2e/: test_cli_startup.py
tests/integration/: test_integration_paths.py  test_postgres_persistence.py
tests/performance/: test_performance_budget.py
tests/unit/: test_action_dispatcher.py  test_artifact_store.py  test_backend_gateway.py  test_candidate_validator.py  test_component_config.py  test_decision_context.py  test_engine_gateway.py  test_error_coordinator.py  test_knowledge_index.py  test_llm_gateway.py  test_mode_rules.py  test_models.py  test_orchestration_loop.py  test_persistent_store.py  test_policy.py  test_policy_store.py  test_replay_loader.py  test_research_concierge.py  test_retry_policy.py  test_runtime_checks.py  test_skill_tool_registry.py  test_trace_recorder.py  test_working_memory.py
(+13 files in other folders)
