[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eqorch"
version = "0.1.0"
description = "EqOrch orchestration core"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "psycopg[binary]>=3.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
